--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,36 +1,66 @@
 {% extends 'base.html' %}
-
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
+
 
 {% if user.is_authenticated %}
 
-<h1>Hello!</h1>
+
+<table class="table table-striped table-hover table-bordered">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Created at</th>
+      <th scope="col">Title</th>
+      <th scope="col">Author</th>
+      <th scope="col">Genre</th>
+      <th scope="col">Year Published</th>
+    </tr>
+  </thead>
+  <tbody>
+    
+{% if books %}
+	{% for book in books %}
+		<tr>
+			<td><a href="{% url 'book' book.id %}">{{ book.id }}</a></td>
+			<td>{{ book.created_at }}</td>
+			<td>{{ book.title }}</td>
+			<td>{{ book.author }}</td>
+			<td>{{ book.genre }}</td>
+			<td>{{ book.year_published }}</td>
+		<tr>
+	{% endfor %}
+
+{% endif %}
+
+
+	</tr>
+	  </tbody>
+	</table>
+
 
 {% else %}
 
+<div class="col-md-6 offset-md-3">
 <h1>Login</h1>
 <br/>
+
 <form method="POST" action="{% url 'home' %}">
 	{% csrf_token %}
-	<form>
+	
   <div class="mb-3">
     <input type="text" class="form-control" name="username", placeholder="Username" required>
  
   </div>
   <div class="mb-3">
-   
     <input type="password" class="form-control" name="password", placeholder="Password" required>
   </div>
  <br/>
   <button type="submit" class="btn btn-secondary">Submit</button>
-</form>
 
 </form>
 
 
-</div>
 
 {% endif %}
 
